# Schnellxplorer

./: Cargo.toml  LICENSE  README.md
src/: center_panel.rs  entrypoint.rs  io.rs  main.rs  menu_bar.rs  side_bar.rs  top_bar.rs  utils.rs
src/ui/: mod.rs
src/ui/directory/: content.rs  io.rs  mod.rs
src/ui/tabs/: mod.rs
